# ToDoList

./: .gitignore  README.md  manage.py  pyproject.toml
config/: settings.py  urls.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
