[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Kim Gwang woon <misili304@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-decouple = "^3.8"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
